# mason-snd

./: .env  .flaskenv  .gitignore  .replit  DELETION_SYSTEM_README.md  DOWNLOAD_SIGNUPS_SUMMARY.md  DOWNLOAD_SIGNUPS_VISUAL_GUIDE.md  PARTNER_EVENT_IMPLEMENTATION.md  Pasted-INFO-werkzeug-172-31-196-67-02-Dec-2024-23-43-11-GET-statistics-log-HTTP-1-1-500-INFO-we-1733183036040.txt  RACE_PROTECTION_FINAL_REPORT.md  RACE_PROTECTION_IMPLEMENTATION.md  RACE_PROTECTION_SUMMARY.md  README.md  README_DOWNLOAD_SIGNUPS.md  ROSTER_EDIT_EXAMPLE.md  ROSTER_EDIT_FEATURE.md  ROSTER_EDIT_INDEX.md  ROSTER_EDIT_QUICK_REFERENCE.md  ROSTER_EDIT_README.md  ROSTER_EDIT_SUMMARY.md  ROSTER_EDIT_VISUAL_GUIDE.md  ROSTER_FIX_SUMMARY.md  TESTING_DASHBOARD_IMPLEMENTATION.md  TODO.md  TOURNAMENT_RESULTS_IMPLEMENTATION.md  TOURNAMENT_SIGNUPS_VISUAL_SUMMARY.md  TOURNAMENT_SPECIFIC_SIGNUPS_FEATURE.md  analytics.py  app.py  auth.py  debuff.py  forms.py  main.py  models.py  notes.draw  postres.py  pyproject.toml  readme.md  requirements.txt  routes.py  (+12 more)
.github/: copilot-instructions.md
UNIT_TEST/: README.md  README_UPDATED.md  __init__.py  database_manager.py  final_verification.py  integration.py  master_controller.py  metrics_testing.py  production_safety.py  roster_testing.py  run_tests.py  simple_runners.py  workflow_simulator.py
instance/: db.sqlite3
mason_snd/: __init__.py  admin.py  extensions.py
migrations/: add_rank_and_group_to_statistics.py
scripts/: cleanup_fake_signups.py
templates/: 404.html  500.html  account.html  add_event.html  add_participant.html  add_tournament.html  base.html  (+18 more)
(+216 files in other folders)
